fixed extra space under footer and the mobile nav close toggle bug

--- a/src/custom.sass
+++ b/src/custom.sass
@@ -16,6 +16,8 @@ html
     display: flex
     align-items: center
     justify-content: space-between
+    margin-bottom: 0
+    padding: 0
 
 .info-header
     max-width: 960px
@@ -370,13 +372,16 @@ html
         justify-content: space-around
         align-items: center
         flex-direction: column
+        margin-bottom: 0
+        p
+            padding: 0
+            margin: 0
         @media (min-width: 550px)
                 justify-content: space-between
                 flex-direction: row
+                align-items: center
                 width: 85%
                 max-width: 960px
-
-
         .footer-social
             display: flex
             justify-content: space-between
